--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Platzi CI
+name: Platzi CI - mtn
 
 on:
   push:
@@ -16,8 +16,8 @@ jobs:
     #     node-version: [18.x, 20.x, 22.x]
 
     steps:
-      - name: "Hello World"
-        run: echo "Hello World"
+      - name: "Hello World mtn"
+        run: echo "Hello World mtn !!!"
       # - uses: actions/checkout@v4
       # - uses: actions/setup-node@v4
       #   with:
