--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,8 @@ jobs:
     #     node-version: [18.x, 20.x, 22.x]
 
     steps:
+      #^ EL guión "-" indica que es un paso
+      - uses: actions/checkout@v4 #^ Este paso es para clonar el repositorio
       - name: "Hello World mtn"
         run: echo "Hello World mtn !!!"
       - name: "Fecha y Hora"
